# dwpp

./: LICENSE  README.md  Taskfile.yml  config.py  dwpp_ros_node.py  launch_example.launch  main.py  path.py  pyproject.toml  robot.py
nav2_dwpp_controller/: CMakeLists.txt  README.md  dwpp_controller_plugin.xml  package.xml
nav2_dwpp_controller/config/: dwpp_controller_params.yaml
nav2_dwpp_controller/include/nav2_dwpp_controller/: dwpp_controller.hpp
nav2_dwpp_controller/src/: dwpp_controller.cpp
results/: results.txt
results/step_curve_0/: break_constraints_flags_dict.pkl  break_constraints_rate_dict.pkl  curvatures_flags_dict.pkl  look_ahead_positions_dict.pkl  regulated_vs_flags_dict.pkl  rmse_dict.pkl  robot_poses_dict.pkl  robot_ref_velocities_dict.pkl  robot_velocities_dict.pkl  time_stamp_dict.pkl
results/step_curve_1/: break_constraints_flags_dict.pkl  break_constraints_rate_dict.pkl  curvatures_flags_dict.pkl  look_ahead_positions_dict.pkl  regulated_vs_flags_dict.pkl  rmse_dict.pkl  robot_poses_dict.pkl  robot_ref_velocities_dict.pkl  robot_velocities_dict.pkl  time_stamp_dict.pkl
results/step_curve_2/: break_constraints_flags_dict.pkl  break_constraints_rate_dict.pkl  curvatures_flags_dict.pkl  look_ahead_positions_dict.pkl  regulated_vs_flags_dict.pkl  rmse_dict.pkl  robot_poses_dict.pkl  robot_ref_velocities_dict.pkl  robot_velocities_dict.pkl  time_stamp_dict.pkl
results/step_curve_3/: break_constraints_flags_dict.pkl  break_constraints_rate_dict.pkl  curvatures_flags_dict.pkl  look_ahead_positions_dict.pkl  regulated_vs_flags_dict.pkl  rmse_dict.pkl  robot_poses_dict.pkl  robot_ref_velocities_dict.pkl  robot_velocities_dict.pkl  time_stamp_dict.pkl
results/step_curve_4/: break_constraints_flags_dict.pkl  break_constraints_rate_dict.pkl  curvatures_flags_dict.pkl  look_ahead_positions_dict.pkl  regulated_vs_flags_dict.pkl  rmse_dict.pkl  robot_poses_dict.pkl  robot_ref_velocities_dict.pkl  robot_velocities_dict.pkl  time_stamp_dict.pkl
results/step_curve_5/: break_constraints_flags_dict.pkl  break_constraints_rate_dict.pkl  curvatures_flags_dict.pkl  look_ahead_positions_dict.pkl  regulated_vs_flags_dict.pkl  rmse_dict.pkl  robot_poses_dict.pkl  robot_ref_velocities_dict.pkl  robot_velocities_dict.pkl  time_stamp_dict.pkl
results/step_curve_6/: break_constraints_flags_dict.pkl  break_constraints_rate_dict.pkl  curvatures_flags_dict.pkl  look_ahead_positions_dict.pkl  regulated_vs_flags_dict.pkl  rmse_dict.pkl  robot_poses_dict.pkl  robot_ref_velocities_dict.pkl  robot_velocities_dict.pkl  time_stamp_dict.pkl
results/step_curve_7/: break_constraints_flags_dict.pkl  break_constraints_rate_dict.pkl  curvatures_flags_dict.pkl  look_ahead_positions_dict.pkl  regulated_vs_flags_dict.pkl  rmse_dict.pkl  robot_poses_dict.pkl  robot_ref_velocities_dict.pkl  robot_velocities_dict.pkl  time_stamp_dict.pkl
results/step_curve_8/: break_constraints_flags_dict.pkl  break_constraints_rate_dict.pkl  curvatures_flags_dict.pkl  look_ahead_positions_dict.pkl  regulated_vs_flags_dict.pkl  rmse_dict.pkl  robot_poses_dict.pkl  robot_ref_velocities_dict.pkl  robot_velocities_dict.pkl  time_stamp_dict.pkl
ros1_node_example/: dwpp_ros_node.py  launch_example.launch
scripts/: config.py  draw.py  draw_figures.ipynb  dwp.py  main.py  path.py  pure_pursuit.py  robomech2025_animation.ipynb  robot.py  stats.py  test.ipynb
scripts/ipynb/: draw_figures.ipynb  robomech2025_animation.ipynb  vw_plane_plot_test.ipynb
scripts/pkl/: regulated_vs.pkl  robot_ref_velocities.pkl
simulation/results/: results.txt
simulation/scripts/: config.py  draw.py  main.py  path.py  pure_pursuit.py  stats.py  test.ipynb  (+1 more)
(+3 files in other folders)
